# mesa-mcp

./: .gitignore  .mcp.json  AGENTS.md  CODING_RULES.md  INFRASTRUCTURE.md  PLATFORMS.md  README.md  TRACKER.md  infrastructure.md  install.sh  main.py  pyproject.toml
agent_context/: README.md  architecture.md  assumptions.md  coding_style.md  glossary.md  rules.md
docs/: AGENTS.md  README.md  infrastructure.md  roadmap.md  sample-agy-cli.html  sample-gemini-cli.html
docs/development/: README.md  architecture.md  coding_style.md  glossary.md  rules.md
docs/examples/: sample-antigravity-cli.html
marketplace/: mesa-agent.md
marketplace/.claude-plugin/: marketplace.json
marketplace/antigravity/mesa/: README.md
marketplace/claude-code/mesa/: README.md
marketplace/codex/mesa/: TODO.md
marketplace/copilot-cli/mesa/: TODO.md
mesa_mcp/: __init__.py  analysis.py  cleanup.py  columns.py  config.py  data_libs.py  display.py  docs_server.py  environment.py  gyre.py  inlist.py  inlist_resolver.py  installer.py  live_view.py  plotting.py  rates.py  reference.py  runner.py  server.py  shell.py  version.py  viz.py  workspace.py
mesa_mcp/docs/: __init__.py  fetch.py  index.py  search.py  sources.py  test_suite.py
mesa_mcp/knowledge/: __init__.py  addons.py  inlists.py  publications.py
mesa_mcp/tools/: __init__.py  analysis.py  community.py  data.py  docs.py  env.py  execution.py  find.py  gyre.py  info.py  inlist.py  install.py  knowledge.py  plot.py  plotting.py  rates.py  run.py  telemetry.py  viz.py  work.py  workspace.py
skills/mesa-agent/: SKILL.md
(+18 files in other folders)
