[project]
name = "mesa-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for the MESA (Modules for Experiments in Stellar Astrophysics)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.28.0",
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "numpy>=2.4.6",
    "matplotlib>=3.11.0",
    "mesa-reader>=0.3.5",
]

[tool.uv]
# Flat-layout application, not a distributable package: `uv sync` installs the
# dependencies into .venv; the server is run via `python main.py` from the repo root.
package = false
